# rules_asciidoc

./: .gitignore  BUILD.bazel  Gemfile  MODULE.bazel  README.adoc
asciidoc/: BUILD.bazel  asciidoc.bzl  extension.bzl
asciidoc/private/: BUILD.bazel  asciidoc_document.bzl  asciidoc_toolchain.bzl  extension.bzl  repository.bzl  utils.bzl
toolchain/: BUILD.bazel  toolchain.bzl
