#
# BUILD.bazel - root
#

load("//asciidoc:asciidoc.bzl", "asciidoc_document")

exports_files([
    "Gemfile",
    "Gemfile.lock",
])

asciidoc_document(
    name = "html",
    srcs = ["README.adoc"],
    format = "html",
    main = "README.adoc",
)

asciidoc_document(
    name = "man",
    srcs = ["README.adoc"],
    out = "README.man",
    format = "man",
    main = "README.adoc",
)

asciidoc_document(
    name = "docbook",
    srcs = ["README.adoc"],
    out = "README.docbook",
    format = "docbook",
    main = "README.adoc",
)

asciidoc_document(
    name = "epub",
    srcs = ["README.adoc"],
    out = "README.epub",
    format = "epub",
    main = "README.adoc",
)

asciidoc_document(
    name = "pdf",
    srcs = ["README.adoc"],
    out = "README.pdf",
    format = "pdf",
    main = "README.adoc",
)
