#
# MODULE.bazel - bzlmod configuration
#

module(
    name = "rules_asciidoc",
    version = "2026.1",
    bazel_compatibility = [">=9.0.0"],
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "1.0.0")
# bazel_dep(name = "rules_ruby", version = "0.24.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5", dev_dependency = True)
# bazel_dep(name = "bazel_lib", version = "3.2.2", dev_dependency = True)

# ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
# ruby.toolchain(
#     name = "ruby",
#     portable_ruby = True,
#     version = "4.0.0",
# )
# use_repo(ruby, "ruby", "ruby_toolchains")
#
# register_toolchains("@ruby_toolchains//:all")

asciidoc = use_extension("//asciidoc:extension.bzl", "asciidoc", dev_dependency = True)
asciidoc.toolchain(version = "2.0.26", integrity = "sha256-JcIrk0vAriRI8tc9Sy66DFngUhz16JP7CwrVSkYb8GY=")
use_repo(asciidoc, "asciidoc")

register_toolchains("@asciidoc//:toolchain")
