#
# MODULE.bazel - bzlmod configuration
#

module(
    name = "rules_asciidoc",
    version = "2026.1",
    bazel_compatibility = [">=9.0.0"],
    compatibility_level = 1,
)

bazel_dep(name = "bazel_lib", version = "3.2.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_ruby", version = "0.25.0")
bazel_dep(name = "yq.bzl", version = "0.3.2")

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2", dev_dependency = True)

yq_toolchain = use_extension("@yq.bzl//yq:extensions.bzl", "yq")
use_repo(
    yq_toolchain,
    "yq_darwin_amd64",
    "yq_darwin_arm64",
    "yq_linux_amd64",
    "yq_linux_arm64",
    "yq_linux_ppc64le",
    "yq_linux_s390x",
    "yq_windows_amd64",
)

ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby", dev_dependency = True)
ruby.toolchain(
    name = "ruby",
    portable_ruby = True,
    version = "4.0.0",
)
use_repo(ruby, "ruby", "ruby_toolchains")

register_toolchains(
    "@ruby_toolchains//:all",
    dev_dependency = True,
)

asciidoc_dev = use_extension("//asciidoc:extension.bzl", "asciidoc", dev_dependency = True)
use_repo(asciidoc_dev, "asciidoc")

register_toolchains(
    "@asciidoc//:toolchain",
    dev_dependency = True,
)
